Fixed overflow issue

--- a/src/components/Sections/about.css
+++ b/src/components/Sections/about.css
@@ -1,6 +1,6 @@
 #about {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     min-height: 100vh;
     background: linear-gradient(90deg, var(--secondary-bg-color), var(--tertiary-bg-color));
