--- a/src/components/Sections/contact.css
+++ b/src/components/Sections/contact.css
@@ -6,6 +6,7 @@
     align-items: flex-start;
     gap: 20vw;
     min-height: 100vh;
+    width: 100%;
     padding: 30vh 10vw 20vh 10vw;
     background-color: var(--primary-bg-color);
     color: var(--primary-txt-color);
