--- a/src/components/Sections/hero.css
+++ b/src/components/Sections/hero.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: var(--primary-bg-color);
     color: var(--primary-txt-color);
     text-align: center;
