--- a/src/components/Sections/projects.css
+++ b/src/components/Sections/projects.css
@@ -3,7 +3,9 @@
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    width: 100%;
     background-color: var(--primary-bg-color);
+    overflow-x: hidden;
 }
 
 .projects-intro{
