--- a/src/components/Sections/skills.css
+++ b/src/components/Sections/skills.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    width: 100%;
     background-color: var(--secondary-bg-color);
 }
 
